@@ -11,6 +11,7 @@
 - Fixes for Oracle database_schema.sql
 
 (Scott Yeadon)
+- SF bug #1456988 - database-schema.sql and database-schema_13_14.sql inconsistencies
 - update-handle-prefix script changed to also update the metadatavalue table
 - SF bug #1456555 - i18n - missing tags
 - SF bug #1456533 - dspace.url inconsistency
